src/test/ui/mismatched_types/closure-mismatch.stderr
error[E0277]: the trait bound `[closure@$DIR/closure-mismatch.rs:8:9: 8:12]: Foo` is not satisfied
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^ the trait `Foo` is not implemented for `[closure@$DIR/closure-mismatch.rs:8:9: 8:12]`
   |
note: required by a bound in `baz`
  --> $DIR/closure-mismatch.rs:5:11
   |
LL | fn baz<T: Foo>(_: T) {}
   |           ^^^ required by this bound in `baz`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
